--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "pkg-dir": "^4.2.0",
     "punycode": "^2.3.0",
     "randombytes": "^2.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rechoir": "^0.8.0",
     "resolve": "^1.22.2",
     "resolve-cwd": "^3.0.0",
@@ -86,6 +88,9 @@
     "wildcard": "^2.0.1"
   },
   "devDependencies": {
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "typescript": "^5.1.6",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4"
   },
