--- a/package.json
+++ b/package.json
@@ -94,9 +94,11 @@
     "@babel/preset-typescript": "^7.22.5",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "html-webpack-plugin": "^5.5.3",
     "typescript": "^5.1.6",
     "webpack": "^5.88.1",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
