--- a/package.json
+++ b/package.json
@@ -82,7 +82,6 @@
     "update-browserslist-db": "^1.0.11",
     "uri-js": "^4.4.1",
     "watchpack": "^2.4.0",
-    "webpack-merge": "^5.9.0",
     "webpack-sources": "^3.2.3",
     "which": "^2.0.2",
     "wildcard": "^2.0.1"
@@ -101,12 +100,13 @@
     "typescript": "^5.1.6",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.9.0"
   },
   "scripts": {
-    "start": "webpack serve --config webpack/webpack.config.js --open",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "start": "webpack serve --config webpack/webpack.config.js --env env=dev --open",
+    "build": "webpack --config webpack/webpack.config.js --env env=prod",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
