--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "acorn-import-assertions": "^1.9.0",
     "ajv": "^6.12.6",
     "ajv-keywords": "^3.5.2",
+    "axios": "^1.4.0",
     "browserslist": "^4.21.9",
     "buffer-from": "^1.1.2",
     "caniuse-lite": "^1.0.30001513",
@@ -42,6 +43,7 @@
     "jest-worker": "^27.5.1",
     "json-parse-even-better-errors": "^2.3.1",
     "json-schema-traverse": "^0.4.1",
+    "json-server": "^0.17.3",
     "kind-of": "^6.0.3",
     "loader-runner": "^4.3.0",
     "locate-path": "^5.0.0",
@@ -62,6 +64,7 @@
     "randombytes": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1",
     "rechoir": "^0.8.0",
     "resolve": "^1.22.2",
     "resolve-cwd": "^3.0.0",
@@ -124,7 +127,8 @@
     "build": "webpack --config webpack/webpack.config.js --env env=prod",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
-    "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
+    "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "serve-json": "json-server --watch db.json --port 4000"
   },
   "keywords": [],
   "author": "",
