--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "randombytes": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.14.1",
     "rechoir": "^0.8.0",
     "resolve": "^1.22.2",
